@@ -3,8 +3,11 @@ package com.xwc.demo.wechat.iLink.demo;
 import com.xwc.demo.wechat.iLink.ILinkClient;
 import com.xwc.demo.wechat.iLink.core.config.ILinkConfig;
 import com.xwc.demo.wechat.iLink.core.listener.OnMessageListener;
+import com.xwc.demo.wechat.iLink.core.model.FileItem;
 import com.xwc.demo.wechat.iLink.core.model.MessageItem;
+import com.xwc.demo.wechat.iLink.core.model.VoiceItem;
 import com.xwc.demo.wechat.iLink.core.model.WeixinMessage;
+import com.xwc.demo.llm.VoiceGeneration;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.*;
@@ -33,7 +36,101 @@ public class WeChatBot {
     private static String llmModel = "";
     private static final String llmSystemPrompt = "你是一个友善、幽默、智能的微信聊天助手，用中文简短回复。";
     private static final Map<String, List<LlmMsg>> userMemoryObj = new ConcurrentHashMap<>();
+    private static final Map<String, String> userVoicePref = new ConcurrentHashMap<>();  // 用户音色偏好
     private static final int MEMORY_SIZE = 10;
+
+    // ========== 音色系统 ==========
+
+    private static final String VOICE_FEMALE = "Cherry";
+    private static final String VOICE_MALE   = "Ethan";
+    private static final String VOICE_CHILD  = "Pip";
+    private static final String VOICE_ELDER  = "Eldric Sage";
+
+    /** 完整音色目录：按分类列出所有可用音色 */
+    private static final String[][] VOICE_CATALOG = {
+        // {编号, 代码, 中文名, 描述, 分类}
+        // === 女声 ===
+        {"1",  "Cherry",     "芊悦",   "阳光亲切小姐姐",         "女声"},
+        {"2",  "Serena",     "苏瑶",   "温柔小姐姐",             "女声"},
+        {"3",  "Chelsie",    "千雪",   "二次元虚拟女友",         "女声"},
+        {"4",  "Momo",       "茉兔",   "撒娇搞怪",              "女声"},
+        {"5",  "Vivian",     "十三",   "拽拽的小暴躁",           "女声"},
+        {"6",  "Maia",       "四月",   "知性温柔",              "女声"},
+        {"7",  "Bella",      "萌宝",   "可爱小萝莉",             "女声"},
+        {"8",  "Bunny",      "萌小姬", "\"萌属性\"爆棚的小萝莉",   "女声"},
+        {"9",  "Jennifer",   "詹妮弗", "品牌级美语女声",         "女声"},
+        {"10", "Katerina",   "卡捷琳", "御姐音色",              "女声"},
+        {"11", "Mia",        "乖小妹", "温顺乖巧",              "女声"},
+        {"12", "Bellona",    "燕铮莺", "声音洪亮",              "女声"},
+        {"13", "Elias",      "墨讲师", "学术严谨",              "女声"},
+        {"14", "Nini",       "邻家妹", "糯米糍一样软黏",         "女声"},
+        {"15", "Ebona",      "诡婆婆", "诡异低语",              "女声"},
+        {"16", "Stella",     "少女月", "甜到发腻的少女音",       "女声"},
+        {"17", "Sonrisa",    "索尼莎", "热情拉美大姐",           "女声"},
+        {"18", "Sohee",      "素熙",   "温柔韩国欧尼",           "女声"},
+        {"19", "Ono Anna",   "小野杏", "鬼灵精怪青梅竹马",       "女声"},
+        // === 男声 ===
+        {"20", "Ethan",      "晨煦",   "阳光温暖男声",           "男声"},
+        {"21", "Moon",       "月白",   "率性帅气",              "男声"},
+        {"22", "Kai",        "凯",     "耳朵SPA",               "男声"},
+        {"23", "Nofish",     "不吃鱼", "不会翘舌音的设计师",     "男声"},
+        {"24", "Ryan",       "甜茶",   "节奏拉满戏感炸裂",       "男声"},
+        {"25", "Aiden",      "艾登",   "精通厨艺美语男孩",       "男声"},
+        {"26", "Mochi",      "沙小弥", "聪明伶俐小大人",         "男声"},
+        {"27", "Vincent",    "田叔",   "独特沙哑烟嗓",           "男声"},
+        {"28", "Neil",       "阿闻",   "最专业新闻主持人",       "男声"},
+        {"29", "Bodega",     "博德加", "热情西班牙大叔",         "男声"},
+        {"30", "Alek",       "阿列克", "战斗民族的冷",           "男声"},
+        {"31", "Dolce",      "多尔切", "慵懒意大利大叔",         "男声"},
+        {"32", "Lenn",       "莱恩",   "理性底色叛逆细节",       "男声"},
+        {"33", "Emilien",    "埃米尔", "浪漫法国大哥哥",         "男声"},
+        {"34", "Andre",      "安德雷", "声音磁性的沉稳男生",     "男声"},
+        {"35", "Radio Gol",  "戈尔",   "足球诗人",              "男声"},
+        // === 小孩 ===
+        {"36", "Pip",        "顽屁",   "调皮捣蛋小男孩",         "小孩"},
+        {"37", "Seren",      "小婉",   "温和舒缓的声线",         "小孩"},
+        // === 老人 ===
+        {"38", "Eldric Sage","沧明子", "沉稳睿智老者",           "老人"},
+        {"39", "Arthur",     "徐大爷", "岁月旱烟浸泡的质朴嗓音", "老人"},
+        // === 方言 ===
+        {"40", "Jada",       "阿珍",   "上海话",                "方言"},
+        {"41", "Dylan",      "晓东",   "北京话",                "方言"},
+        {"42", "Li",         "老李",   "南京话",                "方言"},
+        {"43", "Marcus",     "秦川",   "陕西话",                "方言"},
+        {"44", "Roy",        "阿杰",   "闽南语",                "方言"},
+        {"45", "Peter",      "李彼得", "天津话",                "方言"},
+        {"46", "Sunny",      "晴儿",   "四川话(女)",            "方言"},
+        {"47", "Eric",       "程川",   "四川话(男)",            "方言"},
+        {"48", "Rocky",      "阿强",   "粤语(男)",              "方言"},
+        {"49", "Kiki",       "阿清",   "粤语(女)",              "方言"},
+    };
+
+    /** 编号 → voice 代码 */
+    private static final Map<String, String> VOICE_BY_NUM = new HashMap<>();
+    /** 中文名/别名 → voice 代码 */
+    private static final Map<String, String> VOICE_BY_NAME = new HashMap<>();
+    /** 分类 → 默认 voice（男声/女声/小孩/老人） */
+    private static final Map<String, String> VOICE_BY_CATEGORY = new LinkedHashMap<>();
+    static {
+        for (String[] v : VOICE_CATALOG) {
+            VOICE_BY_NUM.put(v[0], v[1]);
+            VOICE_BY_NAME.put(v[2], v[1]);
+            VOICE_BY_NAME.put(v[1].toLowerCase(), v[1]); // 代码直通
+        }
+        VOICE_BY_CATEGORY.put("男声", VOICE_MALE);
+        VOICE_BY_CATEGORY.put("女声", VOICE_FEMALE);
+        VOICE_BY_CATEGORY.put("小孩", VOICE_CHILD);
+        VOICE_BY_CATEGORY.put("老人", VOICE_ELDER);
+        // 别名 → 分类默认
+        for (String k : new String[]{"男声","男音","男生","男的","男","男性","大叔","叔叔"})
+            VOICE_BY_NAME.put(k, VOICE_MALE);
+        for (String k : new String[]{"女声","女音","女生","女的","女","女性","姐姐","妹子"})
+            VOICE_BY_NAME.put(k, VOICE_FEMALE);
+        for (String k : new String[]{"小孩","儿童","孩子","小朋友","正太","萝莉","童声"})
+            VOICE_BY_NAME.put(k, VOICE_CHILD);
+        for (String k : new String[]{"老人","老者","长者","爷爷","奶奶","大爷","婆婆","长辈"})
+            VOICE_BY_NAME.put(k, VOICE_ELDER);
+    }
 
     // ==================== 视觉模型配置（读图片理解）====================
     private static String visionBaseUrl = "";
@@ -47,6 +144,12 @@ public class WeChatBot {
     private static String imagegenModel = "";
     private static String imageSize = "1024*1024";
     private static int imageN = 1;
+
+    // ==================== 语音生成配置（TTS）====================
+    private static String ttsBaseUrl = "";
+    private static String ttsApiKey = "";
+    private static String ttsModel = "";
+    private static String ttsVoice = "";
 
     // 图片生成关键词匹配模式
     private static final Pattern IMAGE_GEN_PATTERN = Pattern.compile(
@@ -67,6 +170,10 @@ public class WeChatBot {
         System.out.println("========================================");
 
         loadConfig();
+        loadMemory();
+
+        // Ctrl+C / kill 时自动保存
+        Runtime.getRuntime().addShutdownHook(new Thread(WeChatBot::saveMemory));
 
         ILinkConfig config = ILinkConfig.builder()
                 .connectTimeoutMs(30000)
@@ -87,14 +194,29 @@ public class WeChatBot {
                             if (from == null) continue;
 
                             // 提取消息内容
-                            String text = extractText(msg);
+                            String text = extractText(msg);  // ← 拿 text_item.text
                             boolean hasImage = hasImage(msg);
-                            boolean hasVoice = hasVoice(msg);
+                            boolean hasVoice = hasVoice(msg);   // ← 检查 item_list 里有没有 voice_item
                             boolean hasVideo = hasVideo(msg);
                             boolean hasFile = hasFile(msg);
 
-                            System.out.println("\n[收到] " + from);
-                            if (text != null) System.out.println("  文本: " + text);
+                            System.out.println("\n[收到] " + from + " | msg_type=" + msg.getMessage_type());
+                            // dump 所有 item 类型（诊断 PDF 为什么进了 text 通道）
+                            if (msg.getItem_list() != null) {
+                                for (int i = 0; i < msg.getItem_list().size(); i++) {
+                                    MessageItem mi = msg.getItem_list().get(i);
+                                    String t = mi.getText_item() != null ? "text" :
+                                               mi.getImage_item() != null ? "image" :
+                                               mi.getVoice_item() != null ? "voice" :
+                                               mi.getFile_item() != null ? "file" :
+                                               mi.getVideo_item() != null ? "video" : "?";
+                                    System.out.println("  item[" + i + "] type=" + mi.getType() + " " + t);
+                                }
+                            }
+                            if (text != null) {
+                                String preview = text.length() > 100 ? text.substring(0, 100) + "..." : text;
+                                System.out.println("  文本: " + preview);
+                            }
                             if (hasImage) System.out.println("  [图片]");
                             if (hasVoice) System.out.println("  [语音]");
                             if (hasVideo) System.out.println("  [视频]");
@@ -186,6 +308,7 @@ public class WeChatBot {
             }
         }
 
+        saveMemory();
         try {
             if (client != null) client.close();
         } catch (Exception ignored) {}
@@ -207,10 +330,17 @@ public class WeChatBot {
             return;
         }
 
-        // 2. 处理其他非文本消息类型
-        if (hasVoice) { client.sendText(from, "（我听到你发了语音，但目前只能理解文字~ 打字告诉我吧）"); return; }
+        // 2. 处理语音消息：先取微信自带的语音转文字，识别成功后走 LLM 对话
+        if (hasVoice) {
+            handleVoiceMessage(from, msg, text);
+            return;
+        }
+
         if (hasVideo) { client.sendText(from, "（我看到视频，但目前只能理解文字~ 打字告诉我你想聊什么吧）"); return; }
-        if (hasFile) { client.sendText(from, "（我看到文件，但目前只能理解文字~ 打字告诉我吧）"); return; }
+        if (hasFile) { handleFileMessage(from, msg); return; }
+
+        // 2.5 文件兜底检测：微信可能把文件放在非 file_item 里
+        if (tryHandleAsFile(from, msg)) return;
 
         // 3. 纯文本消息
         if (text == null) {
@@ -228,13 +358,31 @@ public class WeChatBot {
             return;
         }
 
-        // 4. 检测是否是图片生成请求
+        // 特殊指令：切换音色
+        String voiceSwitch = detectVoiceCommand(t);
+        if (voiceSwitch != null) {
+            if ("__LIST__".equals(voiceSwitch)) {
+                sendVoiceCatalog(from);
+                return;
+            }
+            userVoicePref.put(from, voiceSwitch);
+            client.sendText(from, "好的，已切换为" + voiceDisplayName(voiceSwitch) + "～");
+            return;
+        }
+
+        // 4. 检测嵌入在文本里的文件（微信可能把 PDF 内容当文本发过来）
+        if (isEmbeddedFile(t)) {
+            tryProcessEmbeddedFile(from, t);
+            return;
+        }
+
+        // 5. 检测是否是图片生成请求
         if (isImageGenerationRequest(t)) {
             handleImageGeneration(from, t);
             return;
         }
 
-        // 5. 普通文本对话
+        // 6. 普通文本对话
         if (!isLlmEnabled()) {
             client.sendText(from, "我还没配置大模型呢~ 请在 config.properties 里设置 llm.base-url、llm.api-key 和 llm.model，然后重启。");
             return;
@@ -260,26 +408,30 @@ public class WeChatBot {
         System.out.println("  [图片理解] 正在下载并分析图片...");
 
         try {
-            // 下载图片
             byte[] imageData = downloadUserImage(msg);
-
             if (imageData == null || imageData.length == 0) {
                 return "（图片下载失败了，请再发一次试试）";
             }
 
             System.out.println("  [图片理解] 下载成功，大小: " + imageData.length / 1024 + " KB");
 
-            // 转 base64
             String base64Image = Base64.getEncoder().encodeToString(imageData);
             String mimeType = detectMimeType(imageData);
-
-            // 构建用户的问题
             String userQuestion = (text != null && !text.trim().isEmpty())
                                   ? text.trim()
                                   : "这张图片里有什么？请描述一下内容";
 
-            // 调用支持视觉的大模型
+            // 调用视觉模型（含历史上下文）
             String analysis = callLlmWithImage(from, base64Image, mimeType, userQuestion);
+
+            // ⭐ 存入对话记忆，后续文字消息能联系上下文
+            List<LlmMsg> history = userMemoryObj.computeIfAbsent(from, k -> new ArrayList<>());
+            // 用自然语言记，模型不会刻意提"之前那张图"
+            String q = (text != null && !text.trim().isEmpty()) ? text.trim() : "帮我看看这个";
+            history.add(new LlmMsg("user", q));
+            history.add(new LlmMsg("assistant", analysis));
+            while (history.size() > MEMORY_SIZE * 2) history.remove(0);
+
             return analysis;
 
         } catch (Exception e) {
@@ -325,21 +477,29 @@ public class WeChatBot {
         // system prompt
         Map<String, Object> systemMsg = new LinkedHashMap<>();
         systemMsg.put("role", "system");
-        systemMsg.put("content", "你是一个智能图像分析师。当用户发给你图片时，仔细观察并用中文描述图片内容。" +
-                          "如果用户有具体问题，请针对问题回答。回答要简洁明了。");
+        systemMsg.put("content", llmSystemPrompt);
         messages.add(systemMsg);
 
-        // 用户消息（包含图片）
+        // ⭐ 注入历史对话（让模型能联系上下文理解图片）
+        List<LlmMsg> history = userMemoryObj.get(userId);
+        if (history != null) {
+            for (LlmMsg m : history) {
+                Map<String, Object> hMsg = new LinkedHashMap<>();
+                hMsg.put("role", m.role);
+                hMsg.put("content", m.content);
+                messages.add(hMsg);
+            }
+        }
+
+        // 用户消息（包含图片 + 文字问题）
         Map<String, Object> userMsg = new LinkedHashMap<>();
         List<Map<String, Object>> contentList = new ArrayList<>();
 
-        // 文本部分
         Map<String, Object> textPart = new LinkedHashMap<>();
         textPart.put("type", "text");
         textPart.put("text", question);
         contentList.add(textPart);
 
-        // 图片部分
         Map<String, Object> imagePart = new LinkedHashMap<>();
         imagePart.put("type", "image_url");
         Map<String, String> imageUrl = new HashMap<>();
@@ -400,6 +560,282 @@ public class WeChatBot {
         throw new Exception("响应格式异常: " + (resp.length() > 400 ? resp.substring(0, 400) + "..." : resp));
     }
 
+    // ==================== 文件识别 ====================
+
+    /** 兜底：遍历所有 item 类型，找到可下载的媒体当作文件处理 */
+    private static boolean tryHandleAsFile(String from, WeixinMessage msg) {
+        if (msg.getItem_list() == null) return false;
+        for (MessageItem item : msg.getItem_list()) {
+            try {
+                byte[] data = client.downloadMediaFromMessageItem(item);
+                if (data != null && data.length > 100) {
+                    // 尝试提取文字
+                    String text;
+                    try {
+                        text = com.xwc.demo.llm.FileReader.extract(data, "file");
+                    } catch (Exception e) {
+                        // 不是已知格式，当作二进制跳过
+                        continue;
+                    }
+                    if (text.length() >= 10) {
+                        System.out.println("  [文件识别] 兜底检测到文件，提取 " + text.length() + " 字");
+                        String prompt = text.length() > 3000
+                                ? "总结这份文件的要点：\n" + text.substring(0, 3000)
+                                : "总结这份文件的要点：\n" + text;
+                        String reply = callLlm(from, prompt);
+                        List<LlmMsg> history = userMemoryObj.computeIfAbsent(from, k -> new ArrayList<>());
+                        history.add(new LlmMsg("user", "帮我看看这份文件"));
+                        history.add(new LlmMsg("assistant", reply));
+                        while (history.size() > MEMORY_SIZE * 2) history.remove(0);
+                        client.sendText(from, reply);
+                        return true;
+                    }
+                }
+            } catch (Exception ignored) {}
+        }
+        return false;
+    }
+
+    private static void handleFileMessage(String from, WeixinMessage msg) throws Exception {
+        MessageItem fileMsg = null;
+        if (msg.getItem_list() != null) {
+            for (MessageItem item : msg.getItem_list()) {
+                if (item.getFile_item() != null) { fileMsg = item; break; }
+            }
+        }
+        if (fileMsg == null || fileMsg.getFile_item().getMedia() == null) {
+            client.sendText(from, "（没拿到文件内容，请再发一次）");
+            return;
+        }
+
+        FileItem fi = fileMsg.getFile_item();
+        String fileName = fi.getFile_name() != null ? fi.getFile_name() : "unknown";
+        System.out.println("  [文件识别] 收到文件: " + fileName);
+
+        // 检查格式
+        String name = fileName.toLowerCase();
+        if (!name.endsWith(".pdf") && !name.endsWith(".docx") && !name.endsWith(".txt")
+                && !name.endsWith(".doc") && !name.endsWith(".md")) {
+            client.sendText(from, "（暂不支持 " + fileName + " 格式，目前支持 PDF、Word、TXT）");
+            return;
+        }
+
+        try {
+            byte[] data = client.downloadFileFromMessageItem(fileMsg);
+            System.out.println("  [文件识别] 下载成功: " + data.length + " 字节");
+            String text = com.xwc.demo.llm.FileReader.extract(data, fileName);
+            System.out.println("  [文件识别] 提取 " + text.length() + " 字");
+
+            if (text.length() < 10) {
+                client.sendText(from, "（文件内容无法识别，可能是扫描版PDF或加密文件）");
+                return;
+            }
+
+            String prompt = text.length() > 3000
+                    ? "总结这份文件（" + fileName + "）的要点：\n" + text.substring(0, 3000)
+                    : "总结这份文件（" + fileName + "）的要点：\n" + text;
+            String reply = callLlm(from, prompt);
+
+            // 存入记忆
+            List<LlmMsg> history = userMemoryObj.computeIfAbsent(from, k -> new ArrayList<>());
+            history.add(new LlmMsg("user", "帮我看看这份文件（" + fileName + "）"));
+            history.add(new LlmMsg("assistant", reply));
+            while (history.size() > MEMORY_SIZE * 2) history.remove(0);
+
+            client.sendText(from, reply);
+
+        } catch (Exception e) {
+            System.err.println("  [文件识别] 失败: " + e.getMessage());
+            e.printStackTrace();
+            client.sendText(from, "（文件解析失败: " + e.getMessage() + "）");
+        }
+    }
+
+    // ==================== 语音识别 & 回复 ====================
+
+    /**
+     * 处理微信语音消息：
+     *   1. 优先拿 voice_item.getText()——微信服务端已做了语音转文字（普通话识别率很高）
+     *   2. 如果没转出来，下载语音文件自己尝试识别（目前只做提示）
+     *   3. 拿到文字后 -> 和普通文本消息走一样的流程（可能是图片生成请求 / 普通对话）
+     */
+    private static void handleVoiceMessage(String from, WeixinMessage msg, String originalText) throws Exception {
+        System.out.println("  [语音识别] 开始处理语音消息...");
+
+        // 第1步：从消息里捞出 VoiceItem
+        VoiceItem voiceItem = findVoiceItem(msg);
+        if (voiceItem == null) {
+            client.sendText(from, "（没拿到语音内容，请再发一次试试）");
+            return;
+        }
+
+        // ====== 方式 A：微信服务端已填充的 text 字段（首选，零成本）======
+        String voiceText = voiceItem.getText();
+        if (voiceText != null && !voiceText.trim().isEmpty()) {
+            voiceText = voiceText.trim();
+            System.out.println("  [语音识别] ✅ 微信语音转文字: \"" + voiceText + "\"");
+
+            // 先检测是不是音色切换或画图请求
+            String voiceSwitch = detectVoiceCommand(voiceText);
+            if (voiceSwitch != null) {
+                if ("__LIST__".equals(voiceSwitch)) {
+                    sendVoiceCatalog(from);
+                    return;
+                }
+                userVoicePref.put(from, voiceSwitch);
+                client.sendText(from, "（听懂你说：" + voiceText + "）好的，已切换为" + voiceDisplayName(voiceSwitch) + "～");
+                return;
+            }
+            if (isImageGenerationRequest(voiceText)) {
+                client.sendText(from, "（听懂你说：" + voiceText + "，正在帮你生成图片）");
+                handleImageGeneration(from, voiceText);
+                return;
+            }
+
+            // LLM 对话
+            if (!isLlmEnabled()) {
+                client.sendText(from, "我还没配置大模型呢~ 请在 config.properties 里设置 llm.base-url、llm.api-key 和 llm.model，然后重启。");
+                return;
+            }
+
+            client.sendText(from, "（听懂你说：" + voiceText + "，正在思考并生成语音回复）");
+
+            long t0 = System.currentTimeMillis();
+            String llmReply;
+            try {
+                System.out.println("  [语音→LLM] 正在调用 " + llmModel + " ...");
+                llmReply = callLlm(from, voiceText);
+                System.out.println("  [语音→LLM] 回复完成（" + (System.currentTimeMillis() - t0) + " ms，" + llmReply.length() + " 字）");
+            } catch (Exception e) {
+                String errMsg = e.getMessage();
+                if (errMsg != null && errMsg.length() > 200) errMsg = errMsg.substring(0, 200) + "...";
+                System.out.println("  [语音→LLM] 调用失败: " + errMsg);
+                client.sendText(from, "（大模型暂时没响应，请稍后再试）");
+                return;
+            }
+
+            // ⭐ 重点：文本回复 → 语音 → 发给用户
+            replyWithVoice(from, llmReply);
+            return;
+        }
+
+        // ====== 方式 B：没转出来 → 下载音频文件，然后提示 ======
+        // （如果想自己调用第三方 ASR，可以在这里下载音频后调用）
+        System.out.println("  [语音识别] ⚠️  微信没返回 text 字段，尝试下载音频...");
+        try {
+            byte[] voiceData = downloadUserVoice(msg);
+            if (voiceData != null && voiceData.length > 0) {
+                System.out.println("  [语音识别] 音频已下载：" + voiceData.length + " 字节");
+                // 这里如果想接入第三方 ASR（阿里 Paraformer / 百度 / 讯飞）：
+                //   String asrText = callAsr(voiceData, voiceItem.getEncode_type(), voiceItem.getSample_rate());
+                //   client.sendText(from, "（识别内容：" + asrText + "）");
+                client.sendText(from, "（我收到你的语音啦，但这次没听清内容~ 可以打字告诉我哦）");
+            } else {
+                client.sendText(from, "（没拿到语音内容，请再发一次试试）");
+            }
+        } catch (Exception e) {
+            System.err.println("  [语音识别] 下载音频失败: " + e.getMessage());
+            client.sendText(from, "（语音下载失败了，请稍后再试~ 可以打字告诉我哦）");
+        }
+    }
+
+    private static VoiceItem findVoiceItem(WeixinMessage msg) {
+        if (msg.getItem_list() == null) return null;
+        for (MessageItem item : msg.getItem_list()) {
+            if (item.getVoice_item() != null) return item.getVoice_item();
+        }
+        return null;
+    }
+
+    private static byte[] downloadUserVoice(WeixinMessage msg) throws Exception {
+        if (msg.getItem_list() == null) return null;
+        for (MessageItem item : msg.getItem_list()) {
+            if (item.getVoice_item() != null && item.getVoice_item().getMedia() != null) {
+                return client.downloadVoiceFromMessageItem(item);
+            }
+        }
+        return null;
+    }
+
+    // ==================== 文本 → 语音回复 ====================
+
+    /**
+     * 把 LLM 的文本回答转成语音，然后用微信语音消息发回给用户。
+     * 策略：
+     *   1. 先尝试 VoiceGeneration.generate(text, imagegenApiKey) —— 用 DashScope CosyVoice
+     *   2. 然后尝试 client.sendVoice() 如果失败 → 降级为 client.sendFile()
+     *   3. 如果都失败 → 降级为文本消息
+     *
+     * @param toUserId 接收者
+     * @param text     要朗读的文字（LLM 回复）
+     */
+    private static void replyWithVoice(String toUserId, String text) {
+        long t0 = System.currentTimeMillis();
+
+        // 如果文字太长，TTS 可能超长或失败，截断到 500 字左右
+        String textForTts = text;
+        if (textForTts.length() > 500) {
+            textForTts = textForTts.substring(0, 500) + "...";
+        }
+
+        try {
+            System.out.println("  [TTS] 生成语音中（" + textForTts.length() + " 字）...");
+
+            // Step 1: 调用 TTS 生成语音
+            // Key 复用 ttsApiKey（在 loadConfig 里已经优先用 imagegen key）
+            String ttsKey = ttsApiKey;
+            if (ttsKey == null || ttsKey.isEmpty()) {
+                System.out.println("  [TTS] ⚠️  没有 TTS API Key，直接发文本");
+                client.sendText(toUserId, text);
+                return;
+            }
+
+            // 用该用户偏好的音色，没设置则用全局默认
+            String voiceName = userVoicePref.getOrDefault(toUserId, ttsVoice);
+            VoiceGeneration.VoiceResult voice = VoiceGeneration.generate(
+                    textForTts, voiceName, ttsKey, ttsBaseUrl, ttsModel, "mp3");
+
+            // Step 2: 保存成 mp3 文件，以文件形式发给你
+            System.out.println("  [TTS] ✅ 准备发送语音文件：" + voice.audioBytes.length
+                    + " 字节, 估算时长 " + voice.playTimeMs + "ms");
+
+            // 保存到本地（方便你也能直接打开听）
+            String fileName = "tts_" + System.currentTimeMillis() + ".mp3";
+            try {
+                java.nio.file.Path outPath = java.nio.file.Paths.get(fileName);
+                java.nio.file.Files.write(outPath, voice.audioBytes);
+                System.out.println("  [TTS] 💾 已保存到：" + outPath.toAbsolutePath());
+            } catch (Exception e) {
+                System.out.println("  [TTS] 💾 保存本地失败：" + e.getMessage());
+            }
+
+            // 直接以文件形式发到微信
+            client.sendFile(toUserId,
+                    voice.audioBytes,
+                    fileName,
+                    "（语音回复：" + textForTts.substring(0, Math.min(20, textForTts.length())) + "...）");
+
+            // 额外发一段文字（方便不想听语音的人看）
+            // 只有长回复才附文字版，简短语音不冗余
+            if (text.length() > 200) {
+                try {
+                    client.sendText(toUserId, "（文字版：" + text + "）");
+                } catch (Exception ignored) {}
+            }
+
+            System.out.println("  [TTS] ✅ 语音回复完成（" + (System.currentTimeMillis() - t0) + " ms）");
+
+        } catch (Exception e) {
+            // 兜底：语音生成失败，直接发文字
+            String errMsg = e.getMessage();
+            if (errMsg != null && errMsg.length() > 200) errMsg = errMsg.substring(0, 200) + "...";
+            System.out.println("  [TTS] 语音生成失败：" + errMsg + " → 降级为文本回复");
+            try {
+                client.sendText(toUserId, text);
+            } catch (Exception ignored) {}
+        }
+    }
+
     // ==================== 图片生成 ====================
 
     private static boolean isImageGenerationRequest(String text) {
@@ -435,100 +871,113 @@ public class WeChatBot {
     }
 
     private static byte[] generateImage(String prompt) throws Exception {
-        // ========== 多种请求体格式 ==========
+        String modelName = (imagegenModel != null && !imagegenModel.isEmpty()) ? imagegenModel : "wanx-v1";
 
-        // 格式 A: {model, input:{prompt}, parameters:{size, n}}  (旧版 text2image)
-        Map<String, Object> inputA = new LinkedHashMap<>();
-        inputA.put("prompt", prompt);
-        Map<String, Object> paramsA = new LinkedHashMap<>();
-        paramsA.put("size", imageSize);
-        paramsA.put("n", imageN);
-        Map<String, Object> bodyA = new LinkedHashMap<>();
-        bodyA.put("model", imagegenModel);
-        bodyA.put("input", inputA);
-        bodyA.put("parameters", paramsA);
-        String bodyAJson = objectMapper.writeValueAsString(bodyA);
-
-        // 格式 B: {model, prompt, size, n}  (OpenAI兼容)
-        Map<String, Object> bodyB = new LinkedHashMap<>();
-        bodyB.put("model", imagegenModel);
-        bodyB.put("prompt", prompt);
-        bodyB.put("size", imageSize.replace('*', 'x'));
-        bodyB.put("n", imageN);
-        String bodyBJson = objectMapper.writeValueAsString(bodyB);
-
-        // 格式 C: {model, input:{messages:[{role:user, content:prompt}]}, parameters:{size, n}}
-        //         (新版 multimodal 消息格式)
-        Map<String, Object> msg = new LinkedHashMap<>();
-        msg.put("role", "user");
-        msg.put("content", prompt);
-        Map<String, Object> inputC = new LinkedHashMap<>();
-        inputC.put("messages", new Object[]{msg});
-        Map<String, Object> paramsC = new LinkedHashMap<>();
-        paramsC.put("size", imageSize.replace('*', 'x'));
-        paramsC.put("n", imageN);
-        Map<String, Object> bodyC = new LinkedHashMap<>();
-        bodyC.put("model", imagegenModel);
-        bodyC.put("input", inputC);
-        bodyC.put("parameters", paramsC);
-        String bodyCJson = objectMapper.writeValueAsString(bodyC);
-
-        // 格式 D: 同 C 但 size 用 1024*1024 (不转 x)
-        Map<String, Object> paramsD = new LinkedHashMap<>();
-        paramsD.put("size", imageSize);
-        paramsD.put("n", imageN);
-        Map<String, Object> bodyD = new LinkedHashMap<>();
-        bodyD.put("model", imagegenModel);
-        bodyD.put("input", inputC);
-        bodyD.put("parameters", paramsD);
-        String bodyDJson = objectMapper.writeValueAsString(bodyD);
-
-        // 格式 E: content 是数组 [{type:"text", text:"..."}]  (新版多模态)
-        //       {model, input:{messages:[{role:"user", content:[{type:"text", text:"..."}]}]}, parameters:{size:"1024*1024", n:1}}
-        Map<String, Object> textItem = new LinkedHashMap<>();
-        textItem.put("type", "text");
-        textItem.put("text", prompt);
-        Object[] contentArray = new Object[]{textItem};
-        Map<String, Object> msgE = new LinkedHashMap<>();
-        msgE.put("role", "user");
-        msgE.put("content", contentArray);
-        Map<String, Object> inputE = new LinkedHashMap<>();
-        inputE.put("messages", new Object[]{msgE});
-        Map<String, Object> paramsE = new LinkedHashMap<>();
-        paramsE.put("size", imageSize);
-        paramsE.put("n", imageN);
-        Map<String, Object> bodyE = new LinkedHashMap<>();
-        bodyE.put("model", imagegenModel);
-        bodyE.put("input", inputE);
-        bodyE.put("parameters", paramsE);
-        String bodyEJson = objectMapper.writeValueAsString(bodyE);
-
-        // ========== 候选 URL 列表 ==========
+        // 候选 URL 列表
         String[] urls = new String[]{
             "https://dashscope.aliyuncs.com/api/v1/services/aigc/text2image/image-synthesis",
             "https://dashscope.aliyuncs.com/compatible-mode/v1/images/generations",
             "https://dashscope.aliyuncs.com/api/v1/services/aigc/multimodal-generation/generation",
         };
 
-        // 候选请求体列表：[body, 描述]
-        String[][] bodies = new String[][]{
-            {bodyAJson, "DashScope嵌套prompt"},
-            {bodyBJson, "OpenAI扁平"},
-            {bodyCJson, "消息格式size=x"},
-            {bodyDJson, "消息格式size=*"},
-            {bodyEJson, "消息格式content数组"},
-        };
+        // 候选请求体构建：根据 URL 判断用哪种格式（嵌套 / OpenAI 扁平 / multimodal）
+        // 实际在循环里按 URL 特征判断构造请求体
 
-        // ========== 遍历：每个 URL × 每个请求体 ==========
         Exception lastError = null;
-        for (String url : urls) {
-            for (String[] bd : bodies) {
-                String body = bd[0];
-                String fmt = bd[1];
 
-                System.out.println("  [图片生成] 尝试: POST " + url + " | model=" + imagegenModel + " | 格式=" + fmt);
-                System.out.println("  [图片生成] 请求体: " + body);
+        java.util.List<String> tryUrls = new java.util.ArrayList<>();
+        if (imagegenBaseUrl != null && !imagegenBaseUrl.isEmpty()) {
+            tryUrls.add(imagegenBaseUrl);
+        }
+        for (String u : urls) {
+            if (!tryUrls.contains(u)) tryUrls.add(u);
+        }
 
+        for (String url : tryUrls) {
+            boolean openAiCompatible = url.contains("compatible-mode")
+                    || url.contains("images/generations")
+                    || url.contains("openai");
+            boolean isMultimodal = url.contains("multimodal-generation");
+
+            // 对这个 URL，构造几种不同的请求体尝试
+            java.util.List<String> bodies = new java.util.ArrayList<>();
+
+            if (openAiCompatible) {
+                // 格式 B：OpenAI 扁平
+                Map<String, Object> body = new LinkedHashMap<>();
+                body.put("model", modelName);
+                body.put("prompt", prompt);
+                body.put("size", imageSize.replace('*', 'x'));
+                body.put("n", imageN);
+                bodies.add(objectMapper.writeValueAsString(body));
+            } else if (isMultimodal) {
+                // 格式 C/D/E：multimodal 的多种写法
+                Map<String, Object> msg = new LinkedHashMap<>();
+                msg.put("role", "user");
+                msg.put("content", prompt);
+                Map<String, Object> inputC = new LinkedHashMap<>();
+                inputC.put("messages", new Object[]{msg});
+                Map<String, Object> paramsC = new LinkedHashMap<>();
+                paramsC.put("size", imageSize.replace('*', 'x'));
+                paramsC.put("n", imageN);
+                Map<String, Object> bodyC = new LinkedHashMap<>();
+                bodyC.put("model", modelName);
+                bodyC.put("input", inputC);
+                bodyC.put("parameters", paramsC);
+                bodies.add(objectMapper.writeValueAsString(bodyC));
+
+                // 同 C，但 size 用 1024*1024（不转 x）
+                Map<String, Object> paramsD = new LinkedHashMap<>();
+                paramsD.put("size", imageSize);
+                paramsD.put("n", imageN);
+                Map<String, Object> bodyD = new LinkedHashMap<>();
+                bodyD.put("model", modelName);
+                bodyD.put("input", inputC);
+                bodyD.put("parameters", paramsD);
+                bodies.add(objectMapper.writeValueAsString(bodyD));
+
+                // content 是数组形式
+                Map<String, Object> textItem = new LinkedHashMap<>();
+                textItem.put("type", "text");
+                textItem.put("text", prompt);
+                Object[] contentArr = new Object[]{textItem};
+                Map<String, Object> msgE = new LinkedHashMap<>();
+                msgE.put("role", "user");
+                msgE.put("content", contentArr);
+                Map<String, Object> inputE = new LinkedHashMap<>();
+                inputE.put("messages", new Object[]{msgE});
+                Map<String, Object> paramsE = new LinkedHashMap<>();
+                paramsE.put("size", imageSize);
+                paramsE.put("n", imageN);
+                Map<String, Object> bodyE = new LinkedHashMap<>();
+                bodyE.put("model", modelName);
+                bodyE.put("input", inputE);
+                bodyE.put("parameters", paramsE);
+                bodies.add(objectMapper.writeValueAsString(bodyE));
+            } else {
+                // 格式 A：旧版 text2image 嵌套 prompt
+                Map<String, Object> input = new LinkedHashMap<>();
+                input.put("prompt", prompt);
+                Map<String, Object> params = new LinkedHashMap<>();
+                params.put("size", imageSize);
+                params.put("n", imageN);
+                Map<String, Object> body = new LinkedHashMap<>();
+                body.put("model", modelName);
+                body.put("input", input);
+                body.put("parameters", params);
+                bodies.add(objectMapper.writeValueAsString(body));
+
+                // 也试一下 OpenAI 扁平（有些老模型两种都接受）
+                Map<String, Object> bodyFlat = new LinkedHashMap<>();
+                bodyFlat.put("model", modelName);
+                bodyFlat.put("prompt", prompt);
+                bodyFlat.put("size", imageSize.replace('*', 'x'));
+                bodyFlat.put("n", imageN);
+                bodies.add(objectMapper.writeValueAsString(bodyFlat));
+            }
+
+            for (String body : bodies) {
+                System.out.println("  [图片生成] 尝试: POST " + url + " | model=" + modelName);
                 try {
                     URL u = URI.create(url).toURL();
                     HttpURLConnection conn = (HttpURLConnection) u.openConnection();
@@ -556,91 +1005,71 @@ public class WeChatBot {
                     System.out.println("  [图片生成] 响应: HTTP " + code + " | " + resp.length() + " 字符");
 
                     if (code < 200 || code >= 300) {
-                        String errText = resp.length() > 0 ? resp.toString() : "(响应流为空)";
-                        System.out.println("  [图片生成] 错误详情: " + errText);
-                        lastError = new Exception("HTTP " + code + ": " + errText);
+                        lastError = new Exception("HTTP " + code + " | " + resp.substring(0, Math.min(200, resp.length())));
                         continue;
                     }
 
-                    // ====== 解析响应 ======
                     JsonNode root = objectMapper.readTree(resp.toString());
-
-                    // 格式 1: data[0].url / data[0].b64_json
                     JsonNode data = root.path("data");
                     if (data.isArray() && data.size() > 0) {
                         JsonNode first = data.get(0);
                         if (first.has("url")) {
                             String imageUrl = first.get("url").asText();
                             System.out.println("  [图片生成] ✅ 图片URL: " + imageUrl.substring(0, Math.min(120, imageUrl.length())) + "...");
-                            return downloadImageFromUrl(imageUrl);
+                            byte[] imageData = downloadImageFromUrl(imageUrl);
+                            return imageData;
                         }
                         if (first.has("b64_json")) {
-                            String b64 = first.get("b64_json").asText("");
-                            return Base64.getDecoder().decode(b64);
+                            byte[] imageData = Base64.getDecoder().decode(first.get("b64_json").asText(""));
+                            return imageData;
                         }
                     }
 
-                    // 格式 2: output.results[0].url / b64_image
                     JsonNode output = root.path("output");
                     if (output.has("results") && output.get("results").isArray()) {
                         JsonNode first = output.get("results").get(0);
                         if (first.has("url")) {
                             String imageUrl = first.get("url").asText();
                             System.out.println("  [图片生成] ✅ 图片URL: " + imageUrl.substring(0, Math.min(120, imageUrl.length())) + "...");
-                            return downloadImageFromUrl(imageUrl);
+                            byte[] imageData = downloadImageFromUrl(imageUrl);
+                            return imageData;
                         }
                         if (first.has("b64_image")) {
-                            String b64 = first.get("b64_image").asText("");
-                            return Base64.getDecoder().decode(b64);
+                            byte[] imageData = Base64.getDecoder().decode(first.get("b64_image").asText(""));
+                            return imageData;
                         }
                     }
-
-                    // 格式 3: output.url（直接返回 URL）
                     if (output.has("url")) {
                         String imageUrl = output.get("url").asText();
-                        System.out.println("  [图片生成] ✅ 图片URL: " + imageUrl.substring(0, Math.min(120, imageUrl.length())) + "...");
-                        return downloadImageFromUrl(imageUrl);
+                        byte[] imageData = downloadImageFromUrl(imageUrl);
+                        return imageData;
                     }
-
-                    // 格式 4: 顶层 url
-                    if (root.has("url")) {
-                        return downloadImageFromUrl(root.get("url").asText());
-                    }
-
-                    // 格式 5: output.choices[0].message.content[0].image  (新版 multimodal)
                     JsonNode choices = output.path("choices");
                     if (choices.isArray() && choices.size() > 0) {
-                        JsonNode message = choices.get(0).path("message");
-                        JsonNode contentArr = message.path("content");
-                        if (contentArr.isArray() && contentArr.size() > 0) {
-                            JsonNode firstItem = contentArr.get(0);
-                            if (firstItem.has("image")) {
-                                String imageUrl = firstItem.get("image").asText();
-                                // URL 两端可能带反引号 ``，去掉
-                                imageUrl = imageUrl.replaceAll("^`|`$", "").trim();
-                                System.out.println("  [图片生成] ✅ 图片URL: " + imageUrl.substring(0, Math.min(120, imageUrl.length())) + "...");
-                                return downloadImageFromUrl(imageUrl);
-                            }
+                        JsonNode contentArr = choices.get(0).path("message").path("content");
+                        if (contentArr.isArray() && contentArr.size() > 0 && contentArr.get(0).has("image")) {
+                            String u2 = contentArr.get(0).get("image").asText().replaceAll("^`|`$", "").trim();
+                            byte[] imageData = downloadImageFromUrl(u2);
+                            return imageData;
                         }
                     }
-
-                    lastError = new Exception("HTTP 200 但解析失败，原始响应: " + (resp.length() > 400 ? resp.substring(0, 400) + "..." : resp));
-
+                    if (root.has("url")) {
+                        byte[] imageData = downloadImageFromUrl(root.get("url").asText());
+                        return imageData;
+                    }
+                    lastError = new Exception("HTTP 200 但解析失败 | " + resp.substring(0, Math.min(200, resp.length())));
                 } catch (Exception e) {
                     lastError = e;
-                    System.out.println("  [图片生成] 异常: " + e.getMessage());
                 }
             }
         }
 
-        // 所有组合都失败
-        System.out.println("  [图片生成] ❌ 所有方式都失败，请换一个 model 试试，比如 wanx-v1");
         if (lastError != null) throw lastError;
-        throw new Exception("图片生成失败，请尝试其他 model，如 wanx-v1");
+        throw new Exception("图片生成失败，请检查 model / api-key");
     }
 
     private static byte[] downloadImageFromUrl(String urlString) throws Exception {
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setConnectTimeout(15000);
         conn.setReadTimeout(60000);
@@ -666,6 +1095,139 @@ public class WeChatBot {
 
     private static boolean isLlmEnabled() {
         return !llmBaseUrl.isEmpty() && !llmApiKey.isEmpty() && !llmModel.isEmpty();
+    }
+
+    /** 检测文本中是否嵌入了文件内容（如微信把 PDF 当文本发过来） */
+    private static boolean isEmbeddedFile(String text) {
+        if (text == null || text.length() < 20) return false;
+        // PDF 魔术字节 %PDF-
+        if (text.startsWith("%PDF-") || text.contains("\n%PDF-") || text.contains("%PDF-1."))
+            return true;
+        // DOCX 魔术字节 PK (ZIP)
+        if (text.length() > 100 && text.charAt(0) == 'P' && text.charAt(1) == 'K')
+            return true;
+        // 大量乱码字符（高比例非 ASCII + 非中文）
+        int nonPrintable = 0, total = Math.min(text.length(), 200);
+        for (int i = 0; i < total; i++) {
+            char c = text.charAt(i);
+            if (c < 32 && c != '\n' && c != '\r' && c != '\t') nonPrintable++;
+        }
+        return nonPrintable > total / 4;  // 超过 25% 控制字符 = 二进制文件
+    }
+
+    /** 从文本中提取嵌入的文件内容并用 LLM 分析 */
+    private static void tryProcessEmbeddedFile(String from, String text) throws Exception {
+        try {
+            // 把 String 转回 bytes（用 ISO-8859-1 无损转换）
+            byte[] data = text.getBytes(StandardCharsets.ISO_8859_1);
+            String extracted = com.xwc.demo.llm.FileReader.extract(data, "embedded_file");
+            System.out.println("  [嵌入文件] 提取 " + extracted.length() + " 字");
+
+            if (extracted.length() < 10) {
+                client.sendText(from, "（检测到文件内容，但无法提取文字，可能是扫描版PDF）");
+                return;
+            }
+
+            String prompt = extracted.length() > 3000
+                    ? "总结这份文件内容的要点：\n" + extracted.substring(0, 3000)
+                    : "总结这份文件内容的要点：\n" + extracted;
+            String reply = callLlm(from, prompt);
+
+            List<LlmMsg> history = userMemoryObj.computeIfAbsent(from, k -> new ArrayList<>());
+            history.add(new LlmMsg("user", "帮我看看这个文件"));
+            history.add(new LlmMsg("assistant", reply));
+            while (history.size() > MEMORY_SIZE * 2) history.remove(0);
+
+            client.sendText(from, reply);
+        } catch (Exception e) {
+            System.err.println("  [嵌入文件] 解析失败: " + e.getMessage());
+            client.sendText(from, "（文件解析失败：" + e.getMessage() + "）");
+        }
+    }
+
+    /** 检测音色切换指令，返回 "__LIST__" 表示列出音色，返回 null 表示不是指令 */
+    private static String detectVoiceCommand(String text) {
+        String raw = text.trim();
+        // "选择音色"/"音色列表" → 列出
+        if (raw.matches(".*(选择音色|音色列表|有哪些音色|音色有哪些|查看音色|切换音色|所有音色|全部音色).*"))
+            return "__LIST__";
+
+        // 纯数字选择（1-49）或 "选3"
+        if (raw.matches("\\d{1,2}") || raw.matches("选\\d{1,2}")) {
+            String num = raw.replaceAll("\\D", "");
+            return VOICE_BY_NUM.getOrDefault(num, null);
+        }
+
+        // 中文数字（语音输入时 STT 可能输出中文数字）
+        String cn = raw.replaceAll("[，。！？\\s~～]", "");
+        String num = cnToNum(cn);
+        if (num != null) return VOICE_BY_NUM.getOrDefault(num, null);
+
+        String t = raw.replaceAll("[，。！？\\s~～]", "");
+        // 编号选择："选3号" "第5个"
+        var nm = java.util.regex.Pattern.compile("(?:选|第)(\\d{1,2})(?:号|个)?").matcher(t);
+        if (nm.find()) return VOICE_BY_NUM.getOrDefault(nm.group(1), null);
+
+        // 匹配最长别名
+        String best = null;
+        int bestLen = 0;
+        for (var entry : VOICE_BY_NAME.entrySet()) {
+            if (t.contains(entry.getKey()) && entry.getKey().length() > bestLen) {
+                best = entry.getValue();
+                bestLen = entry.getKey().length();
+            }
+        }
+        return best;
+    }
+
+    private static String cnToNum(String s) {
+        String[] map = {"零","一","二","三","四","五","六","七","八","九","十",
+                "十一","十二","十三","十四","十五","十六","十七","十八","十九","二十",
+                "二十一","二十二","二十三","二十四","二十五","二十六","二十七","二十八","二十九","三十",
+                "三十一","三十二","三十三","三十四","三十五","三十六","三十七","三十八","三十九","四十",
+                "四十一","四十二","四十三","四十四","四十五","四十六","四十七","四十八","四十九"};
+        for (int i = 0; i < map.length; i++) {
+            if (s.equals(map[i]) || s.equals("第" + map[i] + "个") || s.equals("选" + map[i]))
+                return String.valueOf(i + 1);
+        }
+        return null;
+    }
+
+    /** 获取音色中文名 */
+    private static String voiceDisplayName(String voiceCode) {
+        for (String[] v : VOICE_CATALOG) {
+            if (v[1].equals(voiceCode)) return v[2] + "(" + v[4] + ")";
+        }
+        return voiceCode;
+    }
+
+    /** 发送音色目录给用户 */
+    private static void sendVoiceCatalog(String userId) throws Exception {
+        StringBuilder sb = new StringBuilder("🎤 可选音色（共" + VOICE_CATALOG.length + "种）\n");
+        sb.append("回复编号或名称即可切换，例如：3 或 选Cherry\n\n");
+
+        String lastCat = "";
+        for (String[] v : VOICE_CATALOG) {
+            if (!v[4].equals(lastCat)) {
+                lastCat = v[4];
+                sb.append("【").append(lastCat).append("】\n");
+            }
+            sb.append(v[0]).append(". ").append(v[2]).append(" — ").append(v[3]).append("\n");
+        }
+        sb.append("\n💡 也可以直接说\"男声\"\"女声\"\"小孩\"\"老人\"快速切换");
+
+        // 太长分段发
+        String text = sb.toString();
+        if (text.length() > 4000) {
+            client.sendText(userId, text.substring(0, 4000));
+            client.sendText(userId, text.substring(4000));
+        } else {
+            client.sendText(userId, text);
+        }
+    }
+
+    private static boolean isTtsEnabled() {
+        return ttsApiKey != null && !ttsApiKey.isEmpty();
     }
 
     private static void loadConfig() {
@@ -708,6 +1270,25 @@ public class WeChatBot {
             imageSize     = trim(props.getProperty("imagegen.size", "1024*1024"));
             imageN       = Integer.parseInt(props.getProperty("imagegen.n", "1"));
 
+            // 语音生成配置（TTS）
+            ttsBaseUrl = trim(props.getProperty("tts.base-url", ""));
+            ttsApiKey   = trim(props.getProperty("tts.api-key", ""));
+            ttsModel = trim(props.getProperty("tts.model", ""));
+            ttsVoice = trim(props.getProperty("tts.voice", ""));
+
+            // TTS API Key 优先级: tts.api-key > imagegen.api-key > llm.api-key
+            if (ttsApiKey.isEmpty()) ttsApiKey = imagegenApiKey;
+            if (ttsApiKey.isEmpty()) ttsApiKey = llmApiKey;
+
+            // 自动推导 TTS URL
+            if (ttsBaseUrl.isEmpty() && !llmBaseUrl.isEmpty()) {
+                String derived = VoiceGeneration.deriveTtsUrl(llmBaseUrl);
+                if (derived != null) ttsBaseUrl = derived;
+            }
+
+            if (ttsModel.isEmpty()) ttsModel = "qwen3-tts-flash";
+            if (ttsVoice.isEmpty()) ttsVoice = "Cherry";
+
         } catch (Exception ignored) {}
 
         System.out.println("----------------------------------------");
@@ -723,11 +1304,26 @@ public class WeChatBot {
         System.out.println("[视觉] api-key  = " + (visionApiKey.isEmpty() ? "（未设置）" : (visionApiKey.substring(0, Math.min(4, visionApiKey.length())) + "***")));
         System.out.println("[视觉] model    = " + (visionModel.isEmpty() ? "（未设置）" : visionModel));
         System.out.println("[图片生成] " + (imagegenEnabled ? "✅ 已启用" : "❌ 未启用") + " | model=" + imagegenModel);
+        System.out.println("[语音生成] tts.base-url=" + (ttsBaseUrl.isEmpty() ? "（默认）" : ttsBaseUrl) + " | tts.model=" + (ttsModel.isEmpty() ? "（默认）" : ttsModel) + " | tts.voice=" + ttsVoice);
         System.out.println("----------------------------------------");
     }
 
     private static String trim(String s) {
-        return s == null ? "" : s.trim();
+        if (s == null) return "";
+        s = s.trim();
+        // 去掉 # 开头的行内注释（Java Properties 默认不解析这个）
+        // 例如："cosyvoice-v3.5 # 你 DashScope 能看到的模型名" → "cosyvoice-v3.5"
+        // 注意：URL 里的 # 是合法字符（锚点），但在我们配置里不会有
+        int hashIdx = s.indexOf('#');
+        if (hashIdx > 0) s = s.substring(0, hashIdx).trim();
+        // 去掉 // 开头的行内注释，但**不能把 URL 里的 https:// 误判**
+        // 策略：只有 // 前面有空格，或者 // 出现在引号里，才当注释
+        // 简单实现：找 " //"（空格+双斜杠），避免误伤 https://
+        int commentIdx = s.indexOf(" //");
+        if (commentIdx > 0) s = s.substring(0, commentIdx).trim();
+        // 也支持行首的 "//"（整行是注释）
+        if (s.startsWith("//")) s = "";
+        return s;
     }
 
     private static String callLlm(String userId, String userText) throws Exception {
@@ -803,6 +1399,88 @@ public class WeChatBot {
         final String role;
         final String content;
         LlmMsg(String role, String content) { this.role = role; this.content = content; }
+        // Jackson 序列化需要
+        public String getRole() { return role; }
+        public String getContent() { return content; }
+    }
+
+    // ========== 记忆持久化 ==========
+
+    private static final java.io.File MEMORY_FILE = new java.io.File("memory.json");
+
+    /** 启动时加载记忆 */
+    private static void loadMemory() {
+        if (!MEMORY_FILE.exists()) return;
+        try {
+            JsonNode root = objectMapper.readTree(MEMORY_FILE);
+            int count = 0;
+            var it = root.fields();
+            while (it.hasNext()) {
+                var entry = it.next();
+                String userId = entry.getKey();
+                JsonNode val = entry.getValue();
+
+                if (val.has("history")) {
+                    // 新格式：{ history: [...], voice: "Cherry" }
+                    List<LlmMsg> history = new ArrayList<>();
+                    for (JsonNode n : val.get("history")) {
+                        history.add(new LlmMsg(n.get("role").asText(), n.get("content").asText()));
+                    }
+                    userMemoryObj.put(userId, history);
+                    count += history.size();
+                    if (val.has("voice")) {
+                        userVoicePref.put(userId, val.get("voice").asText());
+                    }
+                } else if (val.isArray()) {
+                    // 旧格式兼容：直接是消息数组
+                    List<LlmMsg> history = new ArrayList<>();
+                    for (JsonNode n : val) {
+                        history.add(new LlmMsg(n.get("role").asText(), n.get("content").asText()));
+                    }
+                    userMemoryObj.put(userId, history);
+                    count += history.size();
+                }
+            }
+            System.out.println("[记忆] 已加载 " + userMemoryObj.size() + " 个用户，共 " + count + " 条消息"
+                    + (userVoicePref.isEmpty() ? "" : "，" + userVoicePref.size() + " 个音色偏好"));
+        } catch (Exception e) {
+            System.err.println("[记忆] 加载失败: " + e.getMessage());
+        }
+    }
+
+    /** 退出时保存记忆 */
+    private static void saveMemory() {
+        if (userMemoryObj.isEmpty() && userVoicePref.isEmpty()) return;
+        try {
+            Map<String, Map<String, Object>> data = new LinkedHashMap<>();
+            for (var entry : userMemoryObj.entrySet()) {
+                String uid = entry.getKey();
+                Map<String, Object> userData = new LinkedHashMap<>();
+                List<Map<String, String>> msgs = new ArrayList<>();
+                for (LlmMsg m : entry.getValue()) {
+                    Map<String, String> item = new LinkedHashMap<>();
+                    item.put("role", m.role);
+                    item.put("content", m.content);
+                    msgs.add(item);
+                }
+                userData.put("history", msgs);
+                if (userVoicePref.containsKey(uid)) {
+                    userData.put("voice", userVoicePref.get(uid));
+                }
+                data.put(uid, userData);
+            }
+            // 只存音色偏好没有历史的用户
+            for (var entry : userVoicePref.entrySet()) {
+                data.putIfAbsent(entry.getKey(), new LinkedHashMap<>() {{
+                    put("history", new ArrayList<>());
+                    put("voice", entry.getValue());
+                }});
+            }
+            objectMapper.writerWithDefaultPrettyPrinter().writeValue(MEMORY_FILE, data);
+            System.out.println("[记忆] 已保存到 " + MEMORY_FILE.getAbsolutePath());
+        } catch (Exception e) {
+            System.err.println("[记忆] 保存失败: " + e.getMessage());
+        }
     }
 
     // ========== 工具方法 ==========
